# swc-plugin-jsx-attrs

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  README.md  package.json
.github/workflows/: rust.yml
src/: config.rs  lib.rs  transform.rs  utils.rs
src/utils/: json_to_es_ast.rs
tests/: fixture.rs
tests/fixture/: tsconfig.json  typings.d.ts
tests/fixture/append-nested/: config.json  input.tsx  output.txt
tests/fixture/append-once/: config.json  output.txt
tests/fixture/ignore-unmatched/: config.json  input.tsx  output.txt
tests/fixture/prepend-by-default/: config.json  input.tsx  output.txt
tests/fixture/prepend-nested/: config.json  input.tsx  output.txt
tests/fixture/prepend-once/: config.json  input.tsx  output.txt
