[package]
authors = ["imhele <work@imhele.com>"]
description = "SWC plugin for JSX attrs"
edition = "2021"
license = "MIT"
name = "swc_plugin_jsx_attrs"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true
# Optimize for size
opt-level = "s"
# Strip debug symbols
strip = "symbols"

[dependencies]
regex = "1.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
swc_core = { version = "0.78.*", features = [
  "cached",
  "common",
  "ecma_ast",
  "ecma_plugin_transform",
  "ecma_utils",
  "ecma_visit",
] }

[dev-dependencies]
swc_core = { version = "0.78.*", features = [
  "ecma_codegen",
  "ecma_parser",
  "testing_transform",
] }
testing = "0.33.13"

# .cargo/config defines few alias to build plugin.
# cargo build-wasi generates wasm-wasi32 binary
# cargo build-wasm32 generates wasm32-unknown-unknown binary.
